# snake_to_camel

./: .gitignore  Cargo.toml  readme.md  readmeEN.md
src/: config.rs  lib.rs
tests/: test.rs
