[package]
name = "snake_to_camel"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
name = "snake_to_camel"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
heck = "0.5"
proc-macro2 = "1.0"
fxhash = "0.2"


[dev-dependencies]
trybuild = "1.0"
chrono = "0.4"
